[package]
name = "password"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
tokio = { version = "1", features = ["full"] }
firestore = "0.47"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
rustls = { version = "0.23", features = ["ring"] }
